# InstantMessagingSystem

./: .gitignore  README.md
client/: CMakeLists.txt  addfrienddialog.cpp  addfrienddialog.h  choosefrienddialog.cpp  choosefrienddialog.h  common.h  debug.h  groupsessiondetailwidget.cpp  groupsessiondetailwidget.h  historymessagewidget.cpp  historymessagewidget.h  imageviewer.cpp  imageviewer.h  loginwidget.cpp  loginwidget.h  main.cpp  mainwidget.cpp  mainwidget.h  messageeditarea.cpp  messageeditarea.h  messageshowarea.cpp  messageshowarea.h  phoneloginwidget.cpp  phoneloginwidget.h  resource.qrc  selfinfowidget.cpp  selfinfowidget.h  sessiondetailwidget.cpp  sessiondetailwidget.h  sessionfriendarea.cpp  sessionfriendarea.h  soundrecorder.cpp  soundrecorder.h  toast.cpp  toast.h  userinfowidget.cpp  userinfowidget.h  verifycodewidget.cpp  verifycodewidget.h
client/deploy/translations/: qt_de.qm  qt_zh_CN.qm
client/model/: data.h  datacenter.cpp  datacenter.h
client/network/: netclient.cpp  netclient.h
client/proto/: file.proto  friend.proto  message_transmit.proto  notify.proto  speech_recognition.proto  user.proto
mock/: CMakeLists.txt  main.cpp  resource.qrc  server.cpp  server.h  widget.cpp  widget.h
mock/proto/: base.proto  friend.proto  gateway.proto  message_storage.proto
server/: CMakeLists.txt  depends.sh  docker-compose.yml  entrypoint.sh
server/common/: asr.hpp  channel.hpp  dms.hpp  es_message.hpp  es_user.hpp  etcd.hpp  icsearch.hpp  logger.hpp  mysql_chat_session.hpp  mysql_friend_apply.hpp  mysql_message.hpp  mysql_odb.hpp  mysql_relation.hpp  mysql_session_member.hpp  mysql_user.hpp  rabbitmq.hpp  redis_user.hpp  utils.hpp  websocket_connection.hpp
server/conf/: file_server.conf  friend_server.conf  gateway_server.conf  message_server.conf  speech_server.conf  transmit_server.conf  user_server.conf
server/example/asr-common/: makefile  test.cpp
server/example/brpc/: client.cpp  makefile  server.cpp  test.pb.cc  test.pb.h
server/example/cmake/: CMakeLists.txt  main.cpp
server/example/dms-common/: makefile  test.cpp
server/example/es/: bulk_data.json  create_index.json  makefile  search_query.json  test.cpp
server/example/etcd/: get.cpp  makefile  put.cpp
server/example/gflags/: makefile  test.conf  test.cpp
server/example/gtest/: makefile  test.cpp
server/example/httplib/: makefile  test.cpp
server/example/odb/: CMakeLists.txt
server/example/odb/test2/: CMakeLists.txt
server/example/odb/test2/entity/: student.hxx
server/example/odb/test2/source/: main.cpp
server/example/rabbitmq/: consume.cpp  makefile  publish.cpp
server/example/rabbitmq-common/: consume.cpp  makefile  publish.cpp
server/example/redis/: makefile  test.cpp
server/example/rpc-common/: discovery.cpp  es.cpp  makefile  registry.cpp
server/example/sdk/: makefile  test.cpp
server/example/spdlog/: logger.hpp  main.cpp  makefile  test.cpp
server/example/speech/: makefile  test.cpp
server/example/websocket/: makefile  test.cpp
server/file/: CMakeLists.txt  dockerfile
server/file/depends/: libabsl_cord_internal.so.20220623  libabsl_status.so.20220623  libabsl_str_format_internal.so.20220623  libcares.so.2
server/file/source/: file_server.cpp  file_server.hpp
server/file/test/: file_client.cpp
server/friend/: CMakeLists.txt  dockerfile
server/friend/depends/: libabsl_cord.so.20220623  libabsl_random_internal_pool_urbg.so.20220623  libabsl_random_internal_randen_slow.so.20220623  libabsl_random_internal_seed_material.so.20220623  libabsl_strings.so.20220623  libabsl_throw_delegate.so.20220623  libcpr.so.1
server/friend/source/: friend_server.cpp  friend_server.hpp
server/friend/test/: friend_client.cpp
server/friend/test/mysql/: chat_session.sql  friend_apply.sql  makefile  relation.sql  session_member.sql  test.cpp
server/gateway/: CMakeLists.txt  dockerfile
server/gateway/depends/: libabsl_bad_optional_access.so.20220623  libabsl_cordz_handle.so.20220623  libabsl_malloc_internal.so.20220623  libabsl_random_internal_platform.so.20220623  libabsl_random_internal_randen_hwaes_impl.so.20220623  libabsl_strerror.so.20220623  libabsl_strings_internal.so.20220623  libabsl_symbolize.so.20220623  libaddress_sorting.so.29  libredis++.so.1
server/gateway/source/: gateway_server.cpp  gateway_server.hpp
server/message/: CMakeLists.txt  dockerfile
server/message/depends/: libabsl_cordz_info.so.20220623  libabsl_debugging_internal.so.20220623  libabsl_demangle_internal.so.20220623  libabsl_low_level_hash.so.20220623  libabsl_random_internal_randen.so.20220623  libabsl_random_internal_randen_hwaes.so.20220623  libabsl_raw_hash_set.so.20220623  libabsl_time_zone.so.20220623  libelasticlient.so.2  libev.so.4  libjsoncpp.so.19  libprotobuf.so.32
server/message/source/: message_server.cpp  message_server.hpp
server/message/test/: message_client.cpp
server/odb/: chat_session.hxx  friend_apply.hxx  message.hxx  relation.hxx  session_member.hxx  user.hxx
server/proto/: base.proto  file.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  transmit.proto  user.proto
server/speech/: CMakeLists.txt  dockerfile
server/speech/depends/: libabsl_base.so.20220623  libabsl_city.so.20220623  libabsl_raw_logging_internal.so.20220623  libabsl_stacktrace.so.20220623  libabsl_time.so.20220623  libcpprest.so.2.10  libupb.so.29
server/speech/source/: speech_server.cpp  speech_server.hpp
server/speech/test/: speech_client.cpp
server/sql/: chat_session.sql  friend_apply.sql  message.sql  relation.sql  session_member.sql  user.sql
server/transmit/: CMakeLists.txt  dockerfile
server/transmit/depends/: libabsl_exponential_biased.so.20220623  libabsl_graphcycles_internal.so.20220623  libabsl_spinlock_wait.so.20220623  libabsl_statusor.so.20220623  libgrpc++.so.1.51  libre2.so.10
server/transmit/source/: transmit_server.cpp  transmit_server.hpp
server/transmit/test/: transmit_client.cpp
server/user/: CMakeLists.txt  dockerfile
server/user/depends/: libabsl_bad_variant_access.so.20220623  libabsl_hash.so.20220623  (+5 more)
(+35 files in other folders)
